--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ pretty_midi = "^0.2.9"
 librosa = "^0.8.0"
 madmom = "^0.16.1"
 pillow = "^8.3.2"
-pyyaml = "^5.3.1"
+pyyaml = ">=5.3.1"
 jsonschema = "^3.2.0"
 tqdm = "^4.49.0"
 pyfluidsynth = "^1.2.5"
